@startuml
!include Style.puml

$OverrideTheme(MODEL_COLOR)

package Model as Model<<Model>> {
    class Product<<Model>>
    class Name<<Model>>
    class Category<<Model>>
    class Description<<Model>>
    class Price<<Model>>

    class UniqueItemList<<Model>>
    class Item<<Model>>
    class ItemDescriptor<<Model>>
    class ExpiryDate<<Model>>
    class Quantity<<Model>>
}

Product *---> Name
Product *---> Category
Product *---> Description
Product *---> Price
Product *--> UniqueItemList

UniqueItemList --> "*" Item

Item *--> "1" Product
Item --|> ItemDescriptor

ItemDescriptor *--> ExpiryDate
ItemDescriptor *--> Quantity

@enduml
